welcome.lessons.welcome.array.array667.Array667.scala.code
def array667(nums:Array[Int]): Int = {
  var six=0
  var sept=0
  for (i<-0 to nums.length-2){
    if (nums(i)==6&&nums(i+1)==6){six=six+1}
    else if (nums(i)==6&&nums(i+1)==7){sept=sept+1}
  }
  return (six,sept)}